apps/base/tools/yopass/release/httproute.yaml
# yaml-language-server: $schema=https://ctrl-research.github.io/k8s-schemas/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: yopass-external
  annotations:
    # group: external inherited from the envoy-external gateway
    gatus.home-operations.com/enabled: "true"
spec:
  parentRefs:
  - name: envoy-external
    namespace: network
  hostnames:
  - pssst.j6n.dev
  rules:
  - backendRefs:
    - name: yopass
      port: 1337
